specified price width to stop flickering

--- a/src/Components/LightBox/LightBox.css
+++ b/src/Components/LightBox/LightBox.css
@@ -70,6 +70,7 @@
 .price {
     font-weight: bold;
     font-size: 1.5em;
+    width: 4em;
 }
 
 .price-off {
@@ -77,8 +78,9 @@
     font-weight: bold;
     color: rgb(242, 140, 40);
     background-color: rgb(255, 245, 238);
-    padding: 0.45em 0.5em;
+    padding: 0.45em 0.6em;
     border-radius: 5px;
+    width: 2em;
 }
 
 .price-before {
@@ -98,6 +100,11 @@
     padding: 1em;
     border-radius: 10px;
     font-weight: bold;
+}
+
+.item-quantity {
+    max-width: 2em;
+    text-align: center;
 }
 
 .item-count img:hover {
